@@ -3,6 +3,10 @@ Released 2.4.26 2016-xx-xx
 
 Changes since 2.4.25:
 
+Lib/
+* LDAPObject.unbind_ext() now removed class attribute
+  LDAPObject._l to completely invalidate C wrapper object
+
 Modules/
 * Fixed #69 Segmentation fault on whoami_s after unbind 
   (thanks to Christian Heimes and Petr Viktorin)
@@ -1244,4 +1248,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.372 2016/01/26 11:01:08 stroeder Exp $
+$Id: CHANGES,v 1.373 2016/01/26 11:12:54 stroeder Exp $
